<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prototype v1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- facebook ID -->
     <string name="facebook_app_id">826968380688405</string>

    <!-- Strings for Login and Sign up activities -->
    <string name="app_tittle">Prototype v1</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="incorrect_login">Incorrect login</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="incorrent_sign_up">error of input data (maybe two password)</string>
    <string name="remember_login">Remember login</string>

    <!-- explain images -->
    <string name="explain">explain</string>

    <!-- Strings menu -->
    <string name="albums">Albums</string>
    <string name="news">News</string>
    <!-- <string name="take_photo">Take photo</string> -->
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>

    <!-- activities names -->
    <string name="title_activity_main">MainActivity</string>

    <!-- albums -->
    <string name="photo_title">photo title</string>
    <string name="photo_date">photo date</string>
    <string name="photo_content">photo content</string>
    <string name="title_my_photos">My photos</string>

    <!-- profile -->
    <string name="logout">logout</string>
    <string name="label_albums">albums</string>
    <string name="label_friends">friends number</string>
    <string name="label_photos">photos</string>
    <string name="number_x">X</string>

    <!-- Delete photo dialog -->
    <string name="dialog_delete_photo">Delete photo</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="dialog_delete_photo_message">Are you sure?</string>

    <!-- Friends -->
    <string name="input_username">input username</string>
    <string name="search_people">search people</string>
    <string name="commonFriends">common friends</string>
    <string name="no_results">0 matches</string>

    <!-- Menu set current photo -->
    <string name="remove_current_photo">Remove current photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="import_from_facebook">Import from facebook</string>
    <string name="import_from_twitter">Import from twitter</string>

    <!-- Profile users to search -->
    <string name="add_friend">add friend</string>
    <string name="delete_friend">delete friend</string>
    <string name="current_friend">Friends</string>
    <string name="title_activity_init">InitActivity</string>

</resources>
