<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">
    
    <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/app_tittle"
      android:layout_alignParentTop="true"
      android:layout_centerInParent="true"
      android:textSize="50sp"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"/>
    
     <EditText
		 android:id="@+id/username"
	     android:layout_width="200dp"
	     android:layout_height="wrap_content"
	     android:hint="@string/username"
	     android:layout_below="@+id/title"
	     android:layout_centerInParent="true"
	     android:layout_marginTop="10dip"
	     android:layout_marginBottom="5dp"/>
     		  
  	<EditText
     	android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:layout_below="@+id/username"/>
  	
  	<TextView
	    android:id="@+id/incorrect_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/incorrect_login"
        android:textColor="@color/Red"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:visibility="invisible"
        android:textSize="12sp"/>
  	
  	<CheckBox
        android:id="@+id/remember_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_login"
        android:layout_below="@+id/incorrect_login"
        android:layout_alignLeft="@+id/username"
        android:checked="false"
        android:layout_marginBottom="5dp"/>
  	
  	<Button 
    	android:id="@+id/log_in"
    	android:layout_width="100dp"
    	android:layout_height="wrap_content"
    	android:text="@string/log_in"
    	android:layout_gravity="center"
    	android:layout_below="@+id/remember_login"
    	android:layout_alignLeft="@+id/username"/>
     		      
    <Button 
      	android:id="@+id/sign_up"
      	android:layout_width="100dp"
      	android:layout_height="wrap_content"
      	android:text="@string/sign_up"
      	android:layout_alignRight="@+id/username"
      	android:layout_toRightOf="@+id/log_in"
      	android:layout_below="@+id/remember_login"/>
     
     
</RelativeLayout>
