 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                       
     		 <TextView
     		     android:id="@+id/tittle"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:text="@string/app_tittle"
	             android:layout_gravity="center"
	             android:textSize="50sp"
	             android:layout_marginBottom="5dip"
	             android:layout_marginTop="10dip"/>
     		 
     		  <EditText
     		     android:id="@+id/username"
                 android:layout_width="200dip"
                 android:layout_height="wrap_content"
                 android:hint="@string/username"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dip"/>
     		  
     		  <EditText
     		     android:id="@+id/password"
                 android:layout_width="200dip"
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
                 android:inputType="textPassword"
                 android:layout_gravity="center"/>
     		  
     		  <EditText
     		     android:id="@+id/repeat_password"
                 android:layout_width="200dip"
                 android:layout_height="wrap_content"
                 android:hint="@string/repeat_password"
                 android:inputType="textPassword"
                 android:layout_gravity="center"/>
     		  
     		  <TextView
     		     android:id="@+id/incorrect_sign_up"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center"
	             android:text="@string/incorrent_sign_up"
	             android:textColor="@color/Red"
	             android:visibility="invisible"
	             android:textSize="12sp"/>
     		     
   		      <Button 
    		      android:id="@+id/sign_up"
    		      android:layout_width="wrap_content"
    		      android:layout_height="wrap_content"
    		      android:text="@string/sign_up"
    		      android:layout_gravity="center"/>
     		       		      		  
 </LinearLayout>
