<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_title" />
 
    <ImageView
        android:id="@+id/photo"
        android:src="@drawable/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_below="@+id/title"
        android:contentDescription="@string/photo_content"
        android:padding="1dp" />
    
    <TextView
        android:id="@+id/createdAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_date"
        android:layout_below="@+id/photo"/>
    
 
</RelativeLayout>
